# NoisYImage

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  noisytypechoosedlg.cpp  noisytypechoosedlg.h  noisytypechoosedlg.ui
